# triangles_playground_3d

./: Cargo.toml  Trunk.toml  index.html
src/: Schublade - Front.stl  main.rs
