[package]
name = "triangles-playground-3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
triangles = { path = "../triangles" }
wasm-bindgen = "0.2"
log = "0.4"
wasm-logger = "0.2.0"
num-traits = "0.2.15"
stl_io = "0.7.0"
kiss3d = { version = "0.35.0" }
nalgebra = "0.18"
rand = { version = "0.6" }